<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Hello KIKI</string>
    <string name="btn1_label">Hello</string>
    <string name="btn2_label">BMI</string>
    <string name="hint_height">Input height(cm)</string>
    <string name="hint_weight">Input weight(KG)</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="hint_rmb">Input RMB</string>
    <string name="btn_open_label">打开Rate</string>
    <string name="btn_setrate_label">配置</string>
    <string name="btn_cfgok_label">Save</string>
    <string name="hint_cfg_dollar">dollar rate</string>
    <string name="hint_cfg_euro">Euro rate</string>
    <string name="hint_cfg_won">Won rate</string>
</resources>
