<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.firstapp.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/input_w"
        android:id="@+id/input_w"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/input_h"
        android:inputType="number"
        tools:ignore="LabelFor"
        android:hint="@string/hint_height" />

    <Button
        android:text="@string/btn1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hello" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="30sp"
        android:gravity="center" />

    <Button
        android:text="@string/btn2_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="func"
        android:id="@+id/btn_bmi" />

    <Button
        android:text="@string/btn_open_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_open_rate" />


</LinearLayout>
