<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.firstapp.RateActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editRMB"
        tools:ignore="LabelFor"
        android:hint="@string/hint_rmb"
        android:inputType="numberDecimal" />

    <Button
        android:text="@string/btn_dollar_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dollar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_euro"
        android:text="@string/btn_euro_label" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_won"
        android:text="@string/btn_won_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editOther"
        tools:ignore="LabelFor"
        android:enabled="false"
        android:inputType="none" />

    <Button
        android:text="@string/btn_setrate_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_set_rate" />

</LinearLayout>
