<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.firstapp.ConfigActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/rate_dollar"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor"
        android:hint="@string/hint_cfg_dollar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/rate_euro"
        tools:ignore="LabelFor"
        android:hint="@string/hint_cfg_euro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/rate_won"
        tools:ignore="LabelFor"
        android:hint="@string/hint_cfg_won" />

    <Button
        android:text="@string/btn_cfgok_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cfg_ok"
        android:onClick="onSave" />
</LinearLayout>
